<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CEditarColegio">

    <TextView
        android:id="@+id/tv_actualizar_cole"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_act_cole"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.105" />

    <TextView
        android:id="@+id/tv_nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="44dp"
        android:text="@string/txt_nombre"
        app:layout_constraintBottom_toBottomOf="@+id/tv_nombre_e"
        app:layout_constraintEnd_toStartOf="@+id/tv_nombre_e"
        app:layout_constraintTop_toTopOf="@+id/tv_nombre_e"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_distrito"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="48dp"
        android:text="@string/txt_distrito_cole"
        app:layout_constraintBottom_toBottomOf="@+id/tv_distrito_e"
        app:layout_constraintEnd_toStartOf="@+id/tv_distrito_e"
        app:layout_constraintTop_toTopOf="@+id/tv_distrito_e"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/tv_es_fiscal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="28dp"
        android:text="@string/txt_fiscal_cole"
        app:layout_constraintBottom_toBottomOf="@+id/tv_es_fiscal_e"
        app:layout_constraintEnd_toStartOf="@+id/tv_es_fiscal_e"
        app:layout_constraintTop_toTopOf="@+id/tv_es_fiscal_e"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/tv_num_aulas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:text="@string/txt_num_aulas_cole"
        app:layout_constraintEnd_toEndOf="@+id/tv_es_fiscal"
        app:layout_constraintHorizontal_bias="0.38"
        app:layout_constraintStart_toStartOf="@+id/tv_es_fiscal"
        app:layout_constraintTop_toBottomOf="@+id/tv_es_fiscal" />

    <EditText
        android:id="@+id/et_num_aulas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/tv_num_aulas"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tv_num_aulas"
        app:layout_constraintTop_toBottomOf="@+id/tv_num_aulas" />

    <Button
        android:id="@+id/btn_acutalizar_colegio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:text="@string/txt_act_cole"
        app:layout_constraintEnd_toEndOf="@+id/et_num_aulas"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/et_num_aulas"
        app:layout_constraintTop_toBottomOf="@+id/et_num_aulas" />

    <TextView
        android:id="@+id/tv_nombre_e"
        android:layout_width="119dp"
        android:layout_height="29dp"
        android:layout_marginTop="36dp"
        app:layout_constraintEnd_toEndOf="@+id/tv_actualizar_cole"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tv_actualizar_cole"
        app:layout_constraintTop_toBottomOf="@+id/tv_actualizar_cole" />

    <TextView
        android:id="@+id/tv_distrito_e"
        android:layout_width="124dp"
        android:layout_height="25dp"
        android:layout_marginTop="52dp"
        app:layout_constraintEnd_toEndOf="@+id/tv_nombre_e"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toStartOf="@+id/tv_nombre_e"
        app:layout_constraintTop_toBottomOf="@+id/tv_nombre_e" />

    <TextView
        android:id="@+id/tv_es_fiscal_e"
        android:layout_width="128dp"
        android:layout_height="27dp"
        android:layout_marginTop="72dp"
        app:layout_constraintEnd_toEndOf="@+id/tv_distrito_e"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tv_distrito_e"
        app:layout_constraintTop_toBottomOf="@+id/tv_distrito_e" />
</androidx.constraintlayout.widget.ConstraintLayout>